actualizo test