@@ -7,6 +7,8 @@ import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import utn.ddsi.agregador.domain.coleccion.Coleccion;
 import utn.ddsi.agregador.domain.coleccion.ConsensoDefault;
+import utn.ddsi.agregador.domain.coleccion.HechoXColeccion;
+import utn.ddsi.agregador.domain.condicion.InterfaceCondicion;
 import utn.ddsi.agregador.domain.fuentes.Fuente;
 import utn.ddsi.agregador.domain.fuentes.Loader;
 import utn.ddsi.agregador.domain.hecho.Hecho;
@@ -22,12 +24,10 @@ import java.util.Collections;
 import java.util.List;
 
 import static javax.management.Query.eq;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ActualizadorColeccionesTest {
@@ -57,23 +57,54 @@ class ActualizadorColeccionesTest {
 
     @Test
     void deberiaActualizarColeccionesConHechosNormalizados() {
-        Hecho hechoOriginal = new Hecho("Titulo1", "Desc1", null, null, LocalDate.now(), null);
-        Hecho hechoNormalizado = new Hecho("TituloNormal", "Desc", null, null, LocalDate.now(), null);
-        Coleccion coleccion = new Coleccion("titulo", "descripcion", null);
+        Hecho hecho1 = new Hecho();
+        hecho1.setTitulo("Titulo 1");
 
-        when(loader.obtenerHechos(any(LocalDate.class)))
-                .thenReturn(Collections.singletonList(hechoOriginal));
-        when(normalizador.normalizar(anyList()))
-                .thenReturn(Collections.singletonList(hechoNormalizado));
-        when(repositoryColecciones.findAll())
-                .thenReturn(Collections.singletonList(coleccion));
-        when(filtrador.devolverHechosAPartirDe(any(), anyList()))
-                .thenReturn(Collections.singletonList(hechoNormalizado));
+        Hecho hecho2 = new Hecho();
+        hecho2.setTitulo("Titulo 2");
+
+        List<Hecho> hechos = List.of(hecho1, hecho2);
+
+        actualizador = spy(new ActualizadorColecciones(
+                repositoryColecciones,
+                repositoryHechos,
+                normalizador,
+                gestorSolicitudes,
+                List.of(loader),
+                filtrador
+        ));
+
+        // Mock del metodo depurarHechos()
+        doReturn(hechos).when(actualizador).depurarHechos();
+
+        // Condición
+        InterfaceCondicion condicionMock = mock(InterfaceCondicion.class);
+        lenient().when(condicionMock.cumpleCondicion(any())).thenReturn(true);
+
+        // Filtrador
+        lenient().when(filtrador.devolverHechosAPartirDe(any(), any()))
+                .thenReturn(hechos);
+
+        // Colección
+        Coleccion coleccion = new Coleccion("titulo");
+        coleccion.setCondicionDePertenencia(List.of(condicionMock));
+        when(repositoryColecciones.findAll()).thenReturn(List.of(coleccion));
+
+        // WHEN
         actualizador.actualizarColecciones();
-        ArgumentCaptor<List<Hecho>> captor = ArgumentCaptor.forClass(List.class);
-        verify(repositoryHechos).saveAll(captor.capture());
-        List<Hecho> listaGuardada = captor.getValue();
-        assertTrue(listaGuardada.contains(hechoNormalizado));
+
+        // THEN
+        verify(repositoryColecciones).saveAll(List.of(coleccion));
+
+        List<HechoXColeccion> hechosXC = coleccion.getHechos();
+
+        assertNotNull(hechosXC);
+        assertEquals(2, hechosXC.size());
+
+        for (HechoXColeccion hxc : hechosXC) {
+            assertNotNull(hxc.getHecho());
+            assertEquals(coleccion, hxc.getColeccion());
+        }
     }
     @Test
     void deberiaDepurarHechosYGuardarlos() {
